--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Application Data & Config
+config.json
+data/
+backup/
+
+# OS-specific
+.DS_Store
