--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "log",
+  "version": "1.0.0",
+  "description": "A simple logging utility",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["log", "logging", "utility"],
+  "author": "Shubham Shah",
+  "license": "ISC",
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "axios": "^1.4.0",
